--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<nav class="nav justify-content-center">
-  <a class="nav-link active" href="#" aria-current="page">Active link</a>
-  <a class="nav-link" href="#">Link</a>
-  <a class="nav-link disabled" href="#">Disabled link</a>
-</nav>
+<app-lista-viaggi></app-lista-viaggi>
+<hr />
+<app-form-user (craeteUser)="onTakeUser($event)"></app-form-user>
+
+<hr />
+
+<app-form-viaggi></app-form-viaggi>
