--- a/src/app/lista-viaggi/lista-viaggi.component.html
+++ b/src/app/lista-viaggi/lista-viaggi.component.html
@@ -1,2 +1,6 @@
 <p>lista-viaggi works!</p>
-<app-viaggio></app-viaggio>
+<ul>
+  <li *ngFor="let viaggio of viaggi">
+    <app-viaggio [viaggio]="viaggio"></app-viaggio>
+  </li>
+</ul>
