--- a/src/app/lista-viaggi/viaggio/viaggio.component.html
+++ b/src/app/lista-viaggi/viaggio/viaggio.component.html
@@ -1,1 +1,7 @@
 <p>viaggio works!</p>
+{{ viaggio.titolo }}
+{{ viaggio.descrizione }}
+{{ viaggio.prezzo }}
+{{ viaggio.immagine }}
+Creato:
+{{ viaggio.user.username }}
